Изменено по ПЗ №4

--- a/Lesson02-Homework/Wheather/app/src/main/res/layout/activity_main.xml
+++ b/Lesson02-Homework/Wheather/app/src/main/res/layout/activity_main.xml
@@ -5,9 +5,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:theme="@style/MyStyle"
+    >
 
     <TextView
+
         android:id="@+id/weatherInfo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -16,7 +19,9 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.18" />
+        app:layout_constraintVertical_bias="0.18"
+
+        />
 
     <EditText
         android:id="@+id/enterCity"
@@ -25,12 +30,13 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:ems="10"
-        android:inputType="textPersonName"
-        app:layout_constraintBottom_toBottomOf="@+id/showWeatherButton"
-        app:layout_constraintEnd_toStartOf="@+id/showWeatherButton"
+        android:inputType="text"
+        app:layout_constraintBottom_toBottomOf="@id/showWeatherButton"
+        app:layout_constraintEnd_toStartOf="@id/showWeatherButton"
         />
 
     <Button
+        style="@style/myStyleButtons"
         android:id="@+id/showWeatherButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -45,27 +51,6 @@
 
         />
 
-    <TextView
-        android:id="@+id/textCounter"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toEndOf="@+id/button"
-        app:layout_constraintTop_toTopOf="@+id/button"
-        app:layout_constraintBottom_toBottomOf="@+id/button"
-        />
-
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.8"
-        app:layout_constraintHorizontal_bias="0.3"
-        />
 
     <CheckBox
         android:id="@+id/showWindChB"
@@ -84,8 +69,38 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/pressureStr"
-        app:layout_constraintTop_toBottomOf="@+id/showWindChB"
-        app:layout_constraintStart_toStartOf="@+id/showWindChB"
+        app:layout_constraintTop_toBottomOf="@id/showWindChB"
+        app:layout_constraintStart_toStartOf="@id/showWindChB"
+        />
+
+
+
+    <Button
+        android:id="@+id/meowButton"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:onClick="meowOnClick"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.9"
+        app:layout_constraintHorizontal_bias="0.5"
+        android:background="@drawable/cat1"
+        />
+
+    <TextView
+
+        android:id="@+id/meowTV"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.6"
+
         />
 
 
