--- a/Lesson02-Homework/Wheather/app/src/main/res/layout/activity_second.xml
+++ b/Lesson02-Homework/Wheather/app/src/main/res/layout/activity_second.xml
@@ -6,6 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SecondActivity"
+    android:theme="@style/MyStyle"
+
     >
 
     <TextView
@@ -21,6 +23,7 @@
 
 
     <Button
+        style="@style/myStyleButtons"
         android:id="@+id/buttonBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
