--- a/Lesson02-Homework/Wheather/app/src/main/res/values/colors.xml
+++ b/Lesson02-Homework/Wheather/app/src/main/res/values/colors.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
+    <color name="colorPrimary">#003577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="text1">#006666</color>
+    <color name="background1">#0099CC</color>
+    <color name="text2">#708681</color>
+    <color name="background2">#929673</color>
+
+
 </resources>
