--- a/Lesson05AndroidWeather/app/src/main/res/layout/cities_fragment.xml
+++ b/Lesson05AndroidWeather/app/src/main/res/layout/cities_fragment.xml
@@ -10,39 +10,33 @@
     <ListView
         android:id="@android:id/list"
         android:layout_width="match_parent"
-        android:layout_height="300dp">
+        android:layout_height="400dp"
+        >
 
     </ListView>
+
 
     <TextView
         android:id="@android:id/empty"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="50dp"
         android:gravity="center"
         android:text="@string/empty"
 
-        ></TextView>
-
-    <CheckBox
-        android:id="@+id/showWindChB"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/windStr"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.7"
-        app:layout_constraintHorizontal_bias="0.2"
         />
 
-    <CheckBox
-        android:id="@+id/showPressureChB"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/pressureStr"
-        app:layout_constraintTop_toBottomOf="@id/showWindChB"
-        app:layout_constraintStart_toStartOf="@id/showWindChB"
-        />
+    <!--<CheckBox-->
+        <!--android:id="@+id/showWindChB"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="@string/windStr"-->
+    <!--/>-->
+
+    <!--<CheckBox-->
+        <!--android:id="@+id/showPressureChB"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="@string/pressureStr"-->
+    <!--/>-->
 
 </LinearLayout>
