--- a/Lesson05AndroidWeather/app/src/main/res/values/styles.xml
+++ b/Lesson05AndroidWeather/app/src/main/res/values/styles.xml
@@ -8,4 +8,9 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="myStyle">
+
+        <item name="android:textSize" >40dp</item>
+    </style>
+
 </resources>
