--- a/Lesson05AndroidWeather/app/src/main/res/layout/activity_main.xml
+++ b/Lesson05AndroidWeather/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
+            android:hint="@string/enterCity"
             />
 
         <Button android:id="@+id/buttonSelectCity"
@@ -45,21 +46,12 @@
         android:text="@string/pressureStr"
         />
 
-    <Button android:id="@+id/buttonShowWeather"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/showWeather"
-        />
+    <!--<Button android:id="@+id/buttonShowWeather"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="@string/showWeather"-->
+        <!--/>-->
 
-
-    <!--<FrameLayout-->
-        <!--android:id="@+id/select_city_cont"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="0dp"-->
-        <!--android:layout_weight="1"-->
-        <!--android:background="?android:attr/detailsElementBackground">-->
-
-    <!--</FrameLayout>-->
 
     <FrameLayout
 
@@ -68,25 +60,7 @@
         android:layout_height="0dp"
         android:layout_weight="1"
 
-
         ></FrameLayout>
-
-    <!--<FrameLayout-->
-        <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"-->
-        <!--&gt;-->
-        <!--<fragment-->
-            <!--android:name="com.android.lesson05androidweather.CitiesFragment"-->
-            <!--android:id="@+id/cites"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="match_parent">-->
-
-        <!--</fragment>-->
-
-
-
-    <!--</FrameLayout>-->
 
 
 </LinearLayout>
